--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,25 @@
+version: '3.8'
+
 services:
   mongodb:
-    image: mongo:6-jammy
+    image: mongo:6.0
     container_name: notification-mongodb
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: admin123
       MONGO_INITDB_DATABASE: notification_db
-    volumes:
-      - mongodb-data:/data/db
     ports:
       - "27017:27017"
-    healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    networks:
-      - eci-network
 
   rabbitmq:
-    image: rabbitmq:3.12-management-alpine
-    container_name: rabbitmq
+    image: rabbitmq:3.12-management
+    container_name: notification-rabbitmq
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
     ports:
       - "5672:5672"
       - "15672:15672"
-    healthcheck:
-      test: ["CMD", "rabbitmq-diagnostics", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    networks:
-      - eci-network
 
   notification-service:
     build:
@@ -41,8 +27,8 @@ services:
       dockerfile: Dockerfile
     container_name: notification-service
     environment:
-      DEBUG: "False"
-      SECRET_KEY: "your-secret-key-change-in-production"
+      DEBUG: "True"
+      SECRET_KEY: "django-insecure-test-key-12345"
       MONGODB_HOST: mongodb
       MONGODB_PORT: 27017
       MONGODB_NAME: notification_db
@@ -52,28 +38,21 @@ services:
       RABBITMQ_PORT: 5672
       RABBITMQ_USER: guest
       RABBITMQ_PASSWORD: guest
+      ALLOWED_HOSTS: "*"
     ports:
       - "8005:8005"
     depends_on:
-      mongodb:
-        condition: service_healthy
-      rabbitmq:
-        condition: service_healthy
-    volumes:
-      - ./logs:/app/logs
-    networks:
-      - eci-network
-    restart: unless-stopped
+      - mongodb
+      - rabbitmq
 
   notification-consumer:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: notification-consumer
-    command: python consumer.py
     environment:
-      DEBUG: "False"
-      SECRET_KEY: "your-secret-key-change-in-production"
+      DEBUG: "True"
+      SECRET_KEY: "django-insecure-test-key-12345"
       MONGODB_HOST: mongodb
       MONGODB_PORT: 27017
       MONGODB_NAME: notification_db
@@ -83,22 +62,8 @@ services:
       RABBITMQ_PORT: 5672
       RABBITMQ_USER: guest
       RABBITMQ_PASSWORD: guest
+      ALLOWED_HOSTS: "*"
     depends_on:
-      mongodb:
-        condition: service_healthy
-      rabbitmq:
-        condition: service_healthy
-      notification-service:
-        condition: service_started
-    volumes:
-      - ./logs:/app/logs
-    networks:
-      - eci-network
-    restart: unless-stopped
-
-volumes:
-  mongodb-data:
-
-networks:
-  eci-network:
-    driver: bridge
+      - mongodb
+      - rabbitmq
+      - notification-service
